[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/items/door/door2.png" type="Texture" id=1]
[ext_resource path="res://actors/items/door/door6.png" type="Texture" id=2]
[ext_resource path="res://actors/items/door/door1.png" type="Texture" id=3]
[ext_resource path="res://actors/items/door/door3.png" type="Texture" id=4]
[ext_resource path="res://actors/items/door/door4.png" type="Texture" id=5]
[ext_resource path="res://actors/items/door/door5.png" type="Texture" id=6]
[ext_resource path="res://actors/items/door/door.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": false,
"name": "opening",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": false,
"name": "closing",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 15.9999 )

[node name="Door" type="Area2D"]
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource( 7 )

[node name="DoorSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "opening"
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
